--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-asgiref==3.2.7
-Django==3.0.5
-django-widget-tweaks==1.4.8
-pytz==2020.1
-sqlparse==0.3.1
-
+asgiref==3.5.0
+backports.zoneinfo==0.2.1
+distlib==0.3.4
+dj-database-url==0.5.0
+Django==4.0.3
+django-widget-tweaks==1.4.12
+filelock==3.6.0
+gunicorn==20.1.0
+platformdirs==2.5.1
+psycopg2==2.9.3
+six==1.16.0
+sqlparse==0.4.2
+tzdata==2021.5
+virtualenv==20.13.3
+virtualenvwrapper-win==1.2.7
